# SparseBEV

./: .gitattributes  .gitignore  README.md  export_onnx.py  justfile  main.py  pyproject.toml
models/: onnx_wrapper.py  sparsebev_sampling.py  sparsebev_transformer.py
models/csrc/: wrapper.py
